--- a/Proj1-BraveExplorers/Assembly-CSharp.csproj
+++ b/Proj1-BraveExplorers/Assembly-CSharp.csproj
@@ -54,8 +54,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\LockObjects.cs" />
-     <Compile Include="Assets\Scripts\LockTrackedObjects.cs" />
      <Compile Include="Assets\Scripts\Movement.cs" />
+     <Compile Include="Assets\Scripts\Timer.cs" />
      <Compile Include="Assets\Vuforia\Scripts\DefaultInitializationErrorHandler.cs" />
      <Compile Include="Assets\Vuforia\Scripts\DefaultTrackableEventHandler.cs" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
