--- a/Proj1-BraveExplorers/Assembly-CSharp.csproj
+++ b/Proj1-BraveExplorers/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CheckTracked.cs" />
+     <Compile Include="Assets\Scripts\Death.cs" />
      <Compile Include="Assets\Scripts\EndLevel.cs" />
      <Compile Include="Assets\Scripts\HoldButton.cs" />
      <Compile Include="Assets\Scripts\LoadGame.cs" />
